--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="bio-text">
         <p>
           Actuellement, <strong>ATER à l’Université Toulouse 2 Jean Jaurès</strong> et membre de l’équipe 
-          <strong><a href="https://www.irit.fr/smac/" target="_blank">SMAC</a></strong> au sein de l’<strong>IRIT</strong> (Institut de Recherche en Informatique de Toulouse). 
+          <strong><a href="https://www.irit.fr/smac/" target="_blank" style="color: inherit; text-decoration: none;">SMAC</a></strong> au sein de l’<strong>IRIT</strong> (Institut de Recherche en Informatique de Toulouse). 
           Précédemment, chercheur postdoctorant en <strong>IA et robotique</strong> à l'Institut Pascal et à l'INP, Clermont-Ferrand, France.
         </p>
 
