--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
       </div>
     </div>
     <nav>
-      <a href="#" onclick="showSection('about')">Biographie</a>
-      <a href="#" onclick="showSection('projects')">Projets de recherche</a>
-      <a href="#" onclick="showSection('publications')">Publications</a>
-      <a href="#" onclick="showSection('talks')">Talks</a>
-      <a href="#" onclick="showSection('cv')">CV</a>
-      <a href="#" onclick="showSection('teaching')">Enseignement</a>
-      <a href="#" onclick="showSection('contact')">Contact</a>
+      <a href="" onclick="showSection('about')">Biographie</a>
+      <a href="" onclick="showSection('projects')">Projets de recherche</a>
+      <a href="" onclick="showSection('publications')">Publications</a>
+      <a href="" onclick="showSection('talks')">Talks</a>
+      <a href="" onclick="showSection('cv')">CV</a>
+      <a href="" onclick="showSection('teaching')">Enseignement</a>
+      <a href="" onclick="showSection('contact')">Contact</a>
     </nav>
   </header>
 
@@ -94,6 +94,7 @@
         <li>ATER à Toulouse 2</li>
         <li>Cours : IoT, Cloud Computing, IA</li>
         <li>Encadrement de projets de licence et master</li>
+        <a href ="https://www.facebook.com/ClubMecatroniqueEnsetm/posts/merci-beaucoup-pour-tous-les-gens-qui-ont-pu-assist%C3%A9-%C3%A0-cette-formation-nous-esp%C3%A9/2923011647718132/?locale=zh_CN">  journée Mecatronic ENSET MOHAMMEDIA</a>
       </ul>
     </section>
 
