--- a/index.html
+++ b/index.html
@@ -34,9 +34,14 @@
     </div>
   </header>
 
-  <main>
+
+  <div class="page-layout">
+
+  
+  <main class="main-content">
       
     <section id="about" class="content-section">
+        
       <h2 style="color: #1e3a8a; border-bottom: 2px solid #1e3a8a; padding-bottom: 8px;">
         Biographie
       </h2>
@@ -68,7 +73,6 @@
         <div class="bio-image">
           <img src="parcours.gif" alt="Résumé architecture" class="resume-photo" />
         </div>
-
       </div>
     </section>
 
@@ -149,6 +153,10 @@
       <!-- Journaux -->
       <h3>1. Journaux</h3>
       <ul class="bracketed">
+        <li>ELKHOUKHI, H., CHAPELLE, F., MEZOUAR, Y., & LAPUSTA, Y. 
+          <em>Reinforcement Learning-Based Control of Antagonistic Shape Memory Alloy Actuators</em> 
+          <strong>Sensors and Actuators A: Physical, 117276.</strong>.
+        </li>
         <li>ELKHOUKHI, H., NAITMALEK, Y., BAKHOUYA, M., BEROUINE, A., KHARBOUCH, A., LACHHAB, F., ... & ESSAAIDI, M. (2020). 
           <em>A platform architecture for occupancy detection using stream processing and machine learning approaches.</em> 
           <strong>Concurrency and Computation: Practice and Experience</strong>, 32(17), e5651.
@@ -169,10 +177,7 @@
           <em>A review of occupancy sensing technologies and approaches in smart buildings.</em> 
           <strong>International Journal of RF Technologies: Research and Applications</strong>.
         </li>
-        <li>ELKHOUKHI, H., CHAPELLE, F., MEZOUAR, Y., & LAPUSTA, Y. 
-          <em>The use of reinforcement learning for controlling the behavior of the antagonistic shape memory alloy actuator in soft robotic systems.</em> 
-          <strong>Under review in Sensors and Actuators A: Physical</strong>.
-        </li>
+
       </ul>
 
       <!-- Conférences -->
@@ -349,6 +354,22 @@
 
   </main>
 
-  <script src="script.js"></script>
+    <aside class="global-news">
+      <h3 class="news-header">
+        <span class="news-icon">📰</span>
+        Actualités
+      </h3>
+
+      <div class="news-item">
+        <span class="news-date">Janvier 2026</span>
+        <p class="bracketed">
+          <strong>Article accepté : </strong>
+          <em>H. ELKHOUKHI, F. CHAPELLE, Y. MEZOUAR, & Y. LAPUSTA, <a href="https://www.sciencedirect.com/science/article/pii/S0924424725010829" target="_blank">"Reinforcement Learning-Based Control of Antagonistic Shape Memory Alloy Actuators"</a></em>
+          <strong>Sensors and Actuators A: Physical, 117276</strong>      
+        </p>
+      </div>
+    </aside>
+  </div>
+    <script src="script.js"></script>
 </body>
 </html>
