--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <img src="profile.jpg" alt="Photo de Hamza" class="profile-photo" />
       <div class="header-text">
         <h1>Hamza El Khoukhi</h1>
-        <p>PhD – Intelligence Artificielle | ATER - IRIT / Université Toulouse 2</p>
+        <p>PhD – Intelligence Artificielle | ATER - IRIT / Université Toulouse Jean Jaures</p>
       </div>
     </div>
     <div class="nav-container"></div>
@@ -51,7 +51,7 @@
         <!-- Timeline / Text -->
       <div class="bio-text">
         <p>
-          Actuellement, <strong>ATER à l’Université Toulouse 2 Jean Jaurès</strong> et membre de l’équipe 
+          Actuellement, <strong>ATER à l’Université Toulouse Jean Jaurès</strong> et membre de l’équipe 
           <strong><a href="https://www.irit.fr/smac/" target="_blank" style="color: inherit; text-decoration: none;">SMAC</a></strong> au sein de l’<strong>IRIT</strong> (Institut de Recherche en Informatique de Toulouse). 
           Précédemment, chercheur postdoctorant en <strong>IA et robotique</strong> à l'Institut Pascal et à l'INP, Clermont-Ferrand, France.
         </p>
@@ -244,6 +244,7 @@
 
 
     <section id="teaching" class="content-section hidden">
+      <!--
       <h2>Enseignement & Encadrement</h2>
       <ul>
         <li>ATER à Toulouse 2</li>
@@ -251,6 +252,8 @@
         <li>Encadrement de projets de licence et master</li>
         <a href ="https://www.facebook.com/ClubMecatroniqueEnsetm/posts/merci-beaucoup-pour-tous-les-gens-qui-ont-pu-assist%C3%A9-%C3%A0-cette-formation-nous-esp%C3%A9/2923011647718132/?locale=zh_CN">  journée Mecatronic ENSET MOHAMMEDIA</a>
       </ul>
+      -->
+
       <h2 style="color: #1e3a8a; border-bottom: 2px solid #1e3a8a; padding-bottom: 8px;"> Activités Enseignement </h2>
       <table border="4" cellspacing="0" cellpadding="8" style="width:100%; border-collapse: collapse; text-align: left;">
         <thead style="background-color: #1e3a8a; color: white;">
