--- a/index.html
+++ b/index.html
@@ -266,32 +266,32 @@
         <tbody>
           <tr>
             <td>Bases de l'algorithmique et de la programmation / Méthodologie (TD)</td>
-            <td>Math-informatique / Université Toulouse 2 Jean Jaurès</td>
+            <td>Math-informatique / Université Toulouse Jean Jaurès</td>
             <td>16h</td>
           </tr>
           <tr>
             <td>Structure de données et récursivité (TD)</td>
-            <td>Math-informatique / Université Toulouse 2 Jean Jaurès</td>
+            <td>Math-informatique / Université Toulouse Jean Jaurès</td>
             <td>6h</td>
           </tr>
           <tr>
             <td>Architecture des ordinateurs (CM)</td>
-            <td>Math-informatique / Université Toulouse 2 Jean Jaurès</td>
+            <td>Math-informatique / Université Toulouse Jean Jaurès</td>
             <td>6h</td>
           </tr>
           <tr>
             <td>Programmation système et réseaux (CM+TD)</td>
-            <td>Math-informatique / Université Toulouse 2 Jean Jaurès</td>
+            <td>Math-informatique / Université Toulouse Jean Jaurès</td>
             <td>28h</td>
           </tr>
           <tr>
             <td>Programmation mobile (CM + TD)</td>
-            <td>Math-informatique / Université Toulouse 2 Jean Jaurès</td>
+            <td>Math-informatique / Université Toulouse Jean Jaurès</td>
             <td>33h</td>
           </tr>
           <tr>
             <td>Complexité et théories des graphes (TD)</td>
-            <td>Math-informatique / Université Toulouse 2 Jean Jaurès</td>
+            <td>Math-informatique / Université Toulouse Jean Jaurès</td>
             <td>6h</td>
           </tr>
             <tr>
