--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <p>
           Actuellement, <strong>ATER à l’Université Toulouse Jean Jaurès</strong> et membre de l’équipe 
           <strong><a href="https://www.irit.fr/smac/" target="_blank" style="color: inherit; text-decoration: none;">SMAC</a></strong> au sein de l’<strong>IRIT</strong> (Institut de Recherche en Informatique de Toulouse). 
-          Précédemment, chercheur postdoctorant en <strong>IA et robotique</strong> à l'Institut Pascal et à l'INP, Clermont-Ferrand, France.
+          Précédemment, chercheur postdoctorant en <strong>à l'Institut Pascal </strong>, Clermont-Ferrand, France.
         </p>
 
         <p>
@@ -76,10 +76,24 @@
           <strong>SELFSERV</strong> (VLIR-UOS), <strong>MIGRID</strong> (USAID-PEER), et <strong>HOLSYS</strong> (IRESEN).
         </p>
 
+        <!-- Image 
+        <p>
+          Ses travaux portent sur l’intelligence artificielle pour systèmes cyber-physiques, avec des contributions en détection d’occupation et optimisation énergétique des bâtiments intelligents, ainsi qu’en contrôle de systèmes non linéaires via apprentissage automatique et apprentissage par renforcement appliqués à la robotique souple.
+        </p>
+        
+        
         <p>
           Ses principaux intérêts comprennent l'<strong>intelligence artificielle</strong> et ses applications, 
-          les approches d'<strong>apprentissage automatique en temps réel et distribué</strong>, 
+          les approches d'<strong>apprentissage automatique incrementale et distribué</strong>, 
           ainsi que les techniques de <strong>traitement de données en flux</strong>.
+        </p>
+
+        -->
+
+
+        <p>
+          Ses principaux intérêts portent sur l’intelligence artificielle en ligne et temps réel pour la détection et le contrôle dans les systèmes intelligents, 
+          avec des applications en <strong>bâtiments intelligents, optimisation énergétique et robotique souple</strong>.
         </p>
       </div>
 
