--- a/index.html
+++ b/index.html
@@ -92,9 +92,13 @@
 
 
         <p>
-          Ses principaux intérêts portent sur l’intelligence artificielle en ligne et temps réel pour la détection et le contrôle dans les systèmes intelligents, 
-          avec des applications en <strong>bâtiments intelligents, optimisation énergétique et robotique souple</strong>.
+          Ses intérêts portent sur l’
+          <strong>apprentissage automatique en ligne et distribué</strong>, 
+          avec un accent particulier sur l’<strong>optimisation algorithmique</strong>, 
+          l’<strong>adaptation aux flux de données</strong> 
+          et le <strong>contrôle intelligent de systèmes physiques complexes</strong>.
         </p>
+        
       </div>
 
         <!-- Image -->
