--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
 
 
         <p>
-          Ses intérêts portent sur l’
-          <strong>apprentissage automatique en ligne et distribué</strong>, 
+          Ses intérêts de recherche portent sur le 
+          <strong>développement de méthodes d’apprentissage automatique en ligne et distribuées</strong>, 
           avec un accent particulier sur l’<strong>optimisation algorithmique</strong>, 
-          l’<strong>adaptation aux flux de données</strong> 
-          et le <strong>contrôle intelligent de systèmes physiques complexes</strong>.
+          l’<strong>adaptation à des flux de données hétérogènes issus de capteurs IoT</strong> 
+          et leur application au <strong>contrôle intelligent de systèmes cyber-physiques complexes</strong>.
         </p>
         
       </div>
