--- a/index.html
+++ b/index.html
@@ -71,9 +71,8 @@
         </p>
 
         <p>
-          Doctorant en collaboration entre l'Université Moulay Ismail de Meknès et l'Université Internationale de Rabat, Maroc, 
-          sur différents projets de recherche :
-          <strong>SELFSERV</strong> (VLIR-UOS), <strong>MIGRID</strong> (USAID-PEER), et <strong>HOLSYS</strong> (IRESEN).
+          Docteur en informatique spécialisé en intelligence artificielle, impliqué dans plusieurs projets de recherche internationaux, notamment 
+          <strong>SELFSERV</strong> (VLIR-UOS), <strong>MIGRID</strong> (USAID-PEER) et <strong>HOLSYS</strong> (IRESEN).
         </p>
 
         <!-- Image 
@@ -92,11 +91,11 @@
 
 
         <p>
-          Ses intérêts de recherche portent sur le 
+          Mes intérêts de recherche portent sur le 
           <strong>développement de méthodes d’apprentissage automatique en ligne et distribuées</strong>, 
           avec un accent particulier sur l’<strong>optimisation algorithmique</strong>, 
           l’<strong>adaptation à des flux de données hétérogènes issus de capteurs IoT</strong> 
-          et leur application au <strong>contrôle intelligent de systèmes cyber-physiques complexes</strong>.
+          et leur application à la <strong>detection et contrôle intelligent de systèmes cyber-physiques complexes</strong>.
         </p>
         
       </div>
