--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
           <tr>
             <td>Bases de l'algorithmique et de la programmation / Méthodologie (TD)</td>
             <td>Math-informatique / Université Toulouse Jean Jaurès</td>
-            <td>16h</td>
+            <td>32h</td>
           </tr>
           <tr>
             <td>Structure de données et récursivité (TD)</td>
@@ -306,24 +306,29 @@
             <td>6h</td>
           </tr>
           <tr>
-            <td>Architecture des ordinateurs (CM)</td>
+            <td>Architecture des ordinateurs et reseaux (CM)</td>
             <td>Math-informatique / Université Toulouse Jean Jaurès</td>
-            <td>6h</td>
+            <td>27h</td>
           </tr>
           <tr>
             <td>Programmation système et réseaux (CM+TD)</td>
             <td>Math-informatique / Université Toulouse Jean Jaurès</td>
-            <td>28h</td>
+            <td>56h</td>
           </tr>
           <tr>
             <td>Programmation mobile (CM + TD)</td>
             <td>Math-informatique / Université Toulouse Jean Jaurès</td>
-            <td>33h</td>
+            <td>56h</td>
           </tr>
           <tr>
             <td>Complexité et théories des graphes (TD)</td>
             <td>Math-informatique / Université Toulouse Jean Jaurès</td>
-            <td>6h</td>
+            <td>10h</td>
+          </tr>
+          <tr>
+            <td>Programmation fonctionelle (TD)</td>
+            <td>Math-informatique / Université Toulouse Jean Jaurès</td>
+            <td>32h</td>
           </tr>
             <tr>
             <td>Programmation Python (CM+TD/TP)</td>
