--- a/index.html
+++ b/index.html
@@ -301,6 +301,11 @@
             <td>32h</td>
           </tr>
           <tr>
+            <td>Statistique descriptive - études de cas (TD)</td>
+            <td>Math-informatique / Université Toulouse Jean Jaurès</td>
+            <td>24h</td>
+          </tr>
+          <tr>
             <td>Structure de données et récursivité (TD)</td>
             <td>Math-informatique / Université Toulouse Jean Jaurès</td>
             <td>6h</td>
